[package]
name = "kpb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "= 1.0.0"
log = "0.4.21"
num_cpus = "1.2.0"
slab = "0.4.9"
chrono = "0.4.38"
clap = "4.5.7"
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
